# cpu-backpropagation

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: Backpropagation.cpp  Backpropagation.hpp  Matrix.hpp  Network.cpp  Network.hpp  backpropagation.cpp  backpropagation.hpp  main.cpp  matrix.hpp  network.cpp  network.hpp
